testsuite/tests/typecheck/should_fail/tcfail214.stderr

tcfail214.hs:9:10: error:
    • Illegal nested constraint ‘F a’
      (Use UndecidableInstances to permit this)
    • In the instance declaration for ‘C [a]’
